--- a/new/index.html
+++ b/new/index.html
@@ -15,10 +15,10 @@ permalink: /new/
 
 
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 actualContentCell">
-			<table class="tftable">
-        <tr class="normalTR"><th class="normalTH TH1-3"><span class="vwLargerWindow-THorTD">Interview</span></th><th class="hidden-xs normalTH TH2-3"><span class="vwLargerWindow-THorTD">First Shared</span></th><th class="hidden-xs normalTH TH3-3"><span class="vwLargerWindow-THorTD">Last Updated (Estimate)</span></th></tr>
-				<tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/link-to-interview/"><span class="vwLargerWindow-THorTD">None yet - name here</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">interview day/month/year</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">last updated day/month/year</span></td></tr>
-			</table>	
+          <table class="tftable">
+            <tr class="normalTR"><th class="normalTH TH1-3"><span class="vwLargerWindow-THorTD">Interview</span></th><th class="hidden-xs normalTH TH2-3"><span class="vwLargerWindow-THorTD">First Shared</span></th><th class="hidden-xs normalTH TH3-3"><span class="vwLargerWindow-THorTD">Last Updated (Estimate)</span></th></tr>
+            <tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/OwlBearKing/"><span class="vwLargerWindow-THorTD">OwlBearKing</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">7/10/2021</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">7/10/2021</span></td></tr>
+          </table>	
         </div>
         
 
