Fixed quotation issue

--- a/OwlBearKing/index.html
+++ b/OwlBearKing/index.html
@@ -44,7 +44,7 @@ title: "OwlBearKing Interview"
       <div class="col-xs-width100 col-sm-5 col-md-5 col-lg-4 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What is your favorite scary movie? I've noticed you read tarot cards.</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Oh, my favorite scary movie? Child's Play. I used to watch it as a kid with my my Grandmother. I actually had a nightmare about Chucky because of it. My second favorite is Paranormal Activity. Yea, I read tarot cards... unless Bo [a frequent viewer of OwlBearKing] orders. None of them are my favorite, they're all the same. I gotta find my cards. And by find my cards I mean, I haven't found them at all.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Oh, my favorite scary movie? Child's Play. I used to watch it as a kid with my my Grandmother. I actually had a nightmare about Chucky because of it. My second favorite is Paranormal Activity. Yea, I read tarot cards... unless Bo [a frequent viewer of OwlBearKing] orders. None of them are my favorite, they're all the same. I gotta find my cards. And by "find my cards" I mean, I haven't found them at all.</span></p>
         </div>
       </div>
 
