--- a/welp_x/index.html
+++ b/welp_x/index.html
@@ -18,7 +18,7 @@ title: "welp_x Interview"
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-6 col-lg-push-3 actualContentCell">
         <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect welpPNG"
           data-imgcontainrect-src="{{ base }}/welp_x/twitch-stream.png">
-          <img alt="welp from his Twitch profile picture" src="{{ base }}/welp_x/twitch-stream.png">
+          <img alt="welp from his stream online" src="{{ base }}/welp_x/twitch-stream.png">
         </div>
       </div>
 
@@ -61,9 +61,9 @@ title: "welp_x Interview"
       
       
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-4  col-lg-4 actualContentCell">
-        <div class="col-xs-7 col-sm-5 col-md-4 col-lg-4 imgrect tarotPNG"
+        <div class="col-xs-7 col-sm-5 col-md-4 col-lg-4 imgrect welpPNG"
           data-imgcontainrect-src="{{ base }}/welp_x/welp.png">
-          <img alt="OwlBearKing has three tarot readings for sale on Twitch.tv" src="{{ base }}/welp_x/welp.png">
+          <img alt="Welp smiling" src="{{ base }}/welp_x/welp.png">
         </div>
       </div>
 
