--- a/welp_x/index.html
+++ b/welp_x/index.html
@@ -16,7 +16,7 @@ title: "welp_x Interview"
 
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-6 col-lg-push-3 actualContentCell">
-        <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect welpPNG"
+        <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect welp-streamingPNG"
           data-imgcontainrect-src="{{ base }}/welp_x/twitch-stream.png">
           <img alt="welp from his stream online" src="{{ base }}/welp_x/twitch-stream.png">
         </div>
@@ -104,6 +104,18 @@ title: "welp_x Interview"
       </div>
 
       
+      <hr>
+
+
+      <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
+        <div class="textContainer">
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Watch welp_x!</span></h3>
+          <ul class="verse-UL">
+            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.twitch.tv/welp_x">Twitch</a></span></li>
+            <hr>
+          </ul>
+        </div>
+      </div>
 
 
     </div>
