--- a/welp_x/index.html
+++ b/welp_x/index.html
@@ -55,6 +55,7 @@ title: "welp_x Interview"
       <div class="col-xs-width100 col-sm-6 col-md-4 col-lg-4 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Speaking of vibes, do you believe the strength of Altoids comes from the use of real peppermint oil and the dreams of pregnant mermaids?</span></h3>
+          <img alt="altoids with a questionable statement about pregnant mermaids" style="width:100%;" src="{{ base }}/welp_x/altoids.jpg">
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">Um, that is quite the abstract question... and I can't say I do but I do believe in the use of essential oils in holistic care and the benefits in the human body.</span></p>
         </div>
       </div>      
