--- a/DaJakeWhite/index.html
+++ b/DaJakeWhite/index.html
@@ -55,7 +55,7 @@ title: "DaJakeWhite Interview"
 
       <div class="col-xs-width100 col-sm-width100 col-md-4 col-lg-4 actualContentCell">
         <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Who do you suspect is your biggest stalker? I mean, biggest *fan*?</span></h3>
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Who do you suspect is your biggest stalker? I mean, biggest <i>fan</i>?</span></h3>
           <p class="vwLargerWindow-p textCenter col-xs-12 col-sm-12 col-md-12 col-lg-12"><span class="pSpan">My fiance is my biggest fan, and I am so lucky to have her. She is really cool, funny, and super intelligent. She'll be on set with me for hours and hours and hours and hours. I got super lucky. I'm marrying my best friend.</span></p>
         </div>
       </div>      
