--- a/DaJakeWhite/index.html
+++ b/DaJakeWhite/index.html
@@ -16,10 +16,12 @@ title: "DaJakeWhite Interview"
 
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-6 col-lg-push-3 actualContentCell">
-        
-        <a href="https://www.youtube.com/watch?v=mm5NcuXRXlc&t=5s"><div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect welp-streamingPNG"
-          data-imgcontainrect-src="{{ base }}/DaJakeWhite/jake.png"><img alt="welp from his stream online" src="{{ base }}/DaJakeWhite/jake.png">
-        </div></a>
+        <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect welp-streamingPNG"
+        data-imgcontainrect-src="{{ base }}/DaJakeWhite/jake.png">
+          <a href="https://www.youtube.com/watch?v=mm5NcuXRXlc&t=5s" class="imgLink">
+            <img alt="welp from his stream online" src="{{ base }}/DaJakeWhite/jake.png">
+          </a>
+        </div>
       </div>
 
       <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-3 col-lg-pull-6 actualContentCell">
