--- a/DaJakeWhite/index.html
+++ b/DaJakeWhite/index.html
@@ -64,7 +64,7 @@ title: "DaJakeWhite Interview"
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-4 col-lg-4 actualContentCell">
         <div class="col-xs-7 col-sm-5 col-md-4 col-lg-4 imgrect welpPNG"
           data-imgcontainrect-src="{{ base }}/DaJakeWhite/daJakeWhite-streaming.jpg">
-          <a href="https://www.youtube.com/watch?v=mm5NcuXRXlc&t=5s"><img alt="Welp smiling" src="{{ base }}/DaJakeWhite/daJakeWhite-streaming.jpg"></a>
+          <img alt="Welp smiling" src="{{ base }}/DaJakeWhite/daJakeWhite-streaming.jpg">
         </div>
       </div>
 
