--- a/DaJakeWhite/index.html
+++ b/DaJakeWhite/index.html
@@ -18,7 +18,7 @@ title: "DaJakeWhite Interview"
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-6 col-lg-push-3 actualContentCell">
         <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect welp-streamingPNG"
         data-imgcontainrect-src="{{ base }}/DaJakeWhite/jake.png">
-            <img alt="welp from his stream online" src="{{ base }}/DaJakeWhite/jake.png">
+            <img alt="Jake from Hospice" src="{{ base }}/DaJakeWhite/jake.png">
         </div>
       </div>
 
@@ -64,14 +64,14 @@ title: "DaJakeWhite Interview"
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-4 col-lg-4 actualContentCell">
         <div class="col-xs-7 col-sm-5 col-md-4 col-lg-4 imgrect welpPNG"
           data-imgcontainrect-src="{{ base }}/DaJakeWhite/daJakeWhite-streaming.jpg">
-          <img alt="Welp smiling" src="{{ base }}/DaJakeWhite/daJakeWhite-streaming.jpg">
+          <img alt="Jake streaming" src="{{ base }}/DaJakeWhite/daJakeWhite-streaming.jpg">
         </div>
       </div>
 
       <div class="col-xs-width100 col-sm-12 col-md-4 col-lg-4 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What is your favorite content you've helped create?</span></h3>
-          <img alt="altoids with a questionable statement about pregnant mermaids" class="col-xs-8 col-sm-7 col-md-12 col-lg-12" src="{{ base }}/DaJakeWhite/scary.png">
+          <img alt="scary screenshot from Hospice" class="col-xs-8 col-sm-7 col-md-12 col-lg-12" src="{{ base }}/DaJakeWhite/scary.png">
           <p class="vwLargerWindow-p textCenter col-xs-12 col-sm-12 col-md-12 col-lg-12"><span class="pSpan">Probably the short film on my page called Hospice. I made it with a buddy of mine. I love it. If you come back and ask me in four months, it'll be a different answer. We made it for CryptTV.</span></p>
          </div>
       </div>
