--- a/gatorade2008/index.html
+++ b/gatorade2008/index.html
@@ -65,7 +65,7 @@ title: "Gatorade2008 Interview"
             </div>
             <div class="textCaptionRow textCaptionRowBelow">
               <div>
-                <p class="pCaption">Gator playing League of legends without a keyboard using a mouse with many buttons.</p>
+                <p class="pCaption">Gator playing League of legends without a keyboard, using a mouse with many buttons.</p>
               </div>
             </div>
           </div>
@@ -171,11 +171,15 @@ title: "Gatorade2008 Interview"
 
       <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
         <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Watch OwlBearKing!</span></h3>
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Watch gatorade2008!</span></h3>
           <ul class="verse-UL">
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.twitch.tv/owlbearking">Twitch</a></span></li>
+            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.twitch.tv/gatorade2008">Twitch</a></span></li>
             <hr>
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://twitter.com/Owlbearking">Twitter</a></span></li>
+            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://twitter.com/Ohb_Gator">Twitter</a></span></li>
+            <hr>
+            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.youtube.com/channel/UCsZnHcelNA7MDi9ewzfnoaQ/">YouTube</a></span></li>
+            <hr>
+            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.facebook.com/Gatorade2008/">Facebook</a></span></li>
           </ul>
         </div>
       </div>
