--- a/index.html
+++ b/index.html
@@ -1,188 +1,79 @@
 ---
-active: interview
+active: home
 description: >-
-    The spotlight's on Gator. Authentic interview with Gatorade2008.
+    The spotlight's on the good news (the gospel) by giving the spotlight away. Authentic interviews.
 layout: default
-title: "Gatorade2008 Interview"
+title: "Interviews with love"
 ---
 
 
-<h1 class="title">Gatorade2008 Interview</h1>
-<h2 class="subtitle">The spotlight's on Gator:</h2>
+<h1 class="title">Why I Interview</h1>
+<h2 class="subtitle">Sharing the good news using people's popularity:</h2>
 <div class="middleTableContentContainer">
   <div class="middleTbodyContentContainer">
     <div class="actualContentRow">
 
-<style>
-  .imgrectCaptionChild {
-    left: 50%;
-  }
-</style>
 
-      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-6 col-lg-push-3 actualContentCell">
-        <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect twitch-streamPNG"
-          data-imgcontainrect-src="{{ base }}/gatorade2008/stream.png">
-          <img alt="Gatorade2008 streaming screenshot" src="{{ base }}/gatorade2008/stream.png">
+
+      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-2 col-lg-push-5 actualContentCell">
+        <div class="col-xs-7 col-sm-5 col-md-4 col-lg-12 imgrect gospelHeartPNG" data-imgcontainrect-src="{{ base }}/the-gospel-is-the-good-news.png">
+          <a class="imgLink" href="https://www.youtube.com/watch?v=mm5NcuXRXlc&t=5s">
+            <img alt="Glowing transparent cyan blue heart that says 'The gospel is the good news!'" src="{{ base }}/the-gospel-is-the-good-news.png">
+          </a>
         </div>
       </div>
 
-      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-3 col-lg-pull-6 actualContentCell">
+      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-5 col-lg-pull-2 actualContentCell">
         <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What made you choose gatorade2008 as your username? I noticed your Twitter handle is Ohb_Gator so what's with the Gator?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">When I was in high school I was taking a lot of Tylenol and Advil because I have Cerebral Palsy and I was buying Gatorade from the Gatorade machine next to my classroom. It started in high school and just sorta stuck.</span></p>
-        </div>
-      </div>
-      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-3 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Do people treat you differently because of a visible disability? If so, does that annoy you!?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">They can, I'm not saying they don't, they do. It's in their nature to. If you don't understand something, you're going to treat it differently. If you're going to play a new champion, you're going to play it wrong.</span></p>
-        </div>
-      </div>
-
-
-
-      <hr>
-
-
-
-      <div class="col-xs-width100 col-sm-7 col-md-7 col-lg-8 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What's the nicest thing you've ever done for someone? Bragging rights allowed!</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I wouldn't say there's just one thing. I wouldn't be narrowing it down to one specific thing. I can't give you a definitive answer on that.</span></p>
-        </div>
-      </div>
-
-
-      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-5 col-md-5 col-lg-4 actualContentCell">
-        <div class="imageCaptionContainer">
-          <div class="imageCaptionTBODY">
-            <div class="no-keyboard-mouseOnlyPNG imageCaptionRowAbove col-xs-alone col-xs-7 col-sm-8 col-md-7 col-lg-6">
-              <div class="col-xs-alone imgrectCaption">
-                <div class="imgrectCaptionChild col-xs-alone imgrectagain" data-imgcontainrect-src="{{ base }}/gatorade2008/no-keyboard-mouseOnly.png">
-                  <img alt="Gator using a mouse with many buttons, no keyboard at all." src="{{ base }}/gatorade2008/no-keyboard-mouseOnly.png" class="col-xs-7 col-xs-alone col-sm-8 col-md-7 col-lg-6 htmlCheck imgCaption">
-                </div>
-              </div>
-            </div>
-            <div class="textCaptionRow textCaptionRowBelow">
-              <div>
-                <p class="pCaption">Gator playing League of legends without a keyboard, using a mouse with many buttons.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-
-
-      <hr>
-
-
-
-      <div class="col-xs-width100 col-sm-8 col-md-9 col-lg-10 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What's the most annoying LoL champion?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Right now, I feel like it's probably Sett or Mordekaiser. Sett heals so much. I mean there's a ton of broken champs. There's Samira, Mundo because of his passive... there's a lot of things to consider. I think it depends mostly on how you play the game. Are you passive or aggressive? Are you a tank player? There's a lot to consider with that question.</span></p>
-        </div>
-      </div>
-
-
-      <div class="col-xs-width100 col-sm-4 col-md-3 col-lg-2 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What rank are you in LoL?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I'm currently Silver 4.</span></p>
-        </div>
-      </div>
-
-
-      <hr>
-
-      <div class="col-xs-width100 col-sm-3 col-md-3 col-lg-3 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Do you believe Joe Biden is a reptilian shapeshifter?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I'm not answering that question.</span></p>
-        </div>
-      </div>
-
-
-      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Good, no answer makes you safer in this infested world. What's the funniest conspiracy theory you don't believe?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I think the funniest one I've heard lately is that, ugh, bigfoot killed someone on a pot farm.
-          </span></p>
-        </div>
-      </div>
-
-
-      <div class="col-xs-width100 col-sm-3 col-md-3 col-lg-3 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Does bigfoot like pot?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I honestly don't know.</span></p>
-        </div>
-      </div>
-
-
-      <hr>
-
-      <div class="col-xs-width100 col-sm-4 col-md-3 col-lg-2 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Do you mainly top lane?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Yes.</span></p>
-        </div>
-      </div>
-
-
-      <div class="col-xs-width100 col-sm-8 col-md-7 col-lg-9 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What's the most annoying LoL champion?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Right now, I feel like it's probably Sett or Mordekaiser. Sett heals so much. I mean there's a ton of broken champs. There's Samira, Mundo because of his passive... there's a lot of things to consider. I think it depends mostly on how you play the game. Are you passive or aggressive? Are you a tank player? There's a lot to consider with that question.</span></p>
-        </div>
-      </div>
-
-      <hr>
-
-      <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What's the most awful thing someone said to you in high school?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I honestly don't even remember.</span></p>
-        </div>
-      </div>
-
-      <hr>
-
-      <div class="col-xs-width100 col-sm-3 col-md-3 col-lg-3 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">If you could have one superpower, other than shooting spaghetti out of your fingertips... what would it be?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Flying. Flying for sure.</span></p>
-        </div>
-      </div>
-
-
-      <div class="col-xs-width100 col-sm-9 col-md-9 col-lg-9 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">One time I was in church, and they asked what our spiritual gifts were and I said levitation. They then gathered around me and asked for me to display it. I couldn't. That's not even a question. I have to make this a question. Hmm. Have you seen the video of Britney Spears being launched sky high while in a porta potty?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No I haven't.</span></p>
-        </div>
-      </div>
-
-
-      <hr>
-
-
-      <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Watch gatorade2008!</span></h3>
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Interviews are on purpose.</span></h3>
           <ul class="verse-UL">
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.twitch.tv/gatorade2008">Twitch</a></span></li>
-            <hr>
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://twitter.com/Ohb_Gator">Twitter</a></span></li>
-            <hr>
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.youtube.com/channel/UCsZnHcelNA7MDi9ewzfnoaQ/">YouTube</a></span></li>
-            <hr>
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.facebook.com/Gatorade2008/">Facebook</a></span></li>
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviews get viewers.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviews share popularity with both sources.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviews create interest.</span></li>
+            <hr class="li-hr">
           </ul>
         </div>
       </div>
+      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-5 actualContentCell">
+        <div class="textContainer">
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Some interviewers defame.</span></h3>
+          <ul class="verse-UL">
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviews can ruin reputation.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviewers can be deceitful.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviews can have favorable moments removed to make someone look worse.</span></li>
+            <hr class="li-hr">
+          </ul>
+        </div>
+      </div>
+
+
+
+      <hr>
+
+
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 actualContentCell">
+        <div class="textContainer">
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Don't settle for less.<br>You have authentic control of <i>your</i> content.</span></h3>
+          <ul class="verse-UL">
+            <li class="vwLargerWindow-li"><span class="verseSpan">You don't have to accept the gospel to be interviewed. Your interview gathers an audience for the gospel.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">Interviews are only shared when we both agree what parts should be shared.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">No money is made from interviews. I don't accept donations.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">At any time, your request to have your interview removed will happen.</span></li>
+            <hr class="li-hr">
+            <li class="vwLargerWindow-li"><span class="verseSpan">This interview is your work, it's your interview... but you agree to release all copyright from it.<br>This interview is your art, and not legally my art unless required by law.<br>These interviews have no copyright. This site also has no copyright.</span></li>
+            <hr class="li-hr">
+          </ul>
+        </div>
+      </div>
+
 
 
     </div>
