--- a/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/index.html
+++ b/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/index.html
@@ -56,30 +56,10 @@ title: "Supermax Guard Colorado Interview"
       <div class="col-xs-width100 col-sm-8 col-md-7 col-lg-8 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Are you allowed to laugh at your job?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No, legit, someone called my the Derek Chauvan and I had to keep a straight face. I'm really fair, and when he calmed down... he said "I'm sorry." I get called things all day.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No, legit, someone called my the Derek Chauvin and I had to keep a straight face. I'm really fair, and when he calmed down... he said "I'm sorry." I get called things all day.</span></p>
         </div>
       </div>
 
-
-
-      <hr>
-
-
-
-      <div class="col-xs-width100 col-sm-8 col-md-9 col-lg-10 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Are you allowed to laugh when at your job?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No, legit, someone called my the Derek Chauvan and I had to keep a straight face. I'm really fair, and when he calmed down... he said "I'm sorry." I get called things all day.</span></p>
-        </div>
-      </div>
-
-
-      <div class="col-xs-width100 col-sm-4 col-md-3 col-lg-2 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What rank are you in LoL?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I'm currently Silver 4.</span></p>
-        </div>
-      </div>
 
 
       <hr>
@@ -95,7 +75,7 @@ title: "Supermax Guard Colorado Interview"
       <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-3 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Has anyone ever told you your voice sounds like Bob?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">got told that by someone a few minutes ago. It's kinda sad.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Got told that by someone a few minutes ago. It's kinda sad.</span></p>
         </div>
       </div>
 
