--- a/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/index.html
+++ b/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/index.html
@@ -82,7 +82,7 @@ title: "Supermax Guard Colorado Interview"
       <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">That's heartless people make these comparisons about you. Earlier, you said you'd be sort of a jerk in this interview but it seems you seem kind... do you feel you're kinder than you think you are?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No. I'm actually supervisor at a Supermax in Colorado, the highest security prison in America. Hency, why I play games here.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No. I'm actually supervisor at a Supermax in Colorado, the highest security prison in America. Hence, why I play games here.</span></p>
         </div>
       </div>
 
