--- a/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/index.html
+++ b/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/index.html
@@ -56,7 +56,7 @@ title: "Supermax Guard Colorado Interview"
       <div class="col-xs-width100 col-sm-8 col-md-7 col-lg-8 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Are you allowed to laugh at your job?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No, legit, someone called my the Derek Chauvin and I had to keep a straight face. I'm really fair, and when he calmed down... he said "I'm sorry." I get called things all day.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">No, legit, someone called me "Derek Chauvin" and I had to keep a straight face. I'm really fair, and when he calmed down... he said "I'm sorry." I get called things all day.</span></p>
         </div>
       </div>
 
