--- a/Tyler-James/index.html
+++ b/Tyler-James/index.html
@@ -63,7 +63,7 @@ title: "Tyler James Interview"
       <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Do you like Marilyn Manson?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Yea, I like some of his music but some of it's trash, the majority of it's trash.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Yea, I like some of his music, some of it's really good but the majority of it's trash.</span></p>
          </div>
       </div>
       
@@ -81,7 +81,7 @@ title: "Tyler James Interview"
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-4 col-md-4 col-lg-4 actualContentCell">
         <div class="imgrect TylerPNG" data-imgcontainrect-src="{{ base }}/Tyler-James/valley-hills-background-selfie.jpg">
-          <img alt="Alchemyst123's profile picture" src="{{ base }}/Tyler-James/valley-hills-background-selfie.jpg">
+          <img alt="Tyler James Selfie #1" src="{{ base }}/Tyler-James/valley-hills-background-selfie.jpg">
         </div>
       </div>
 
@@ -102,7 +102,7 @@ title: "Tyler James Interview"
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-4 col-md-4 col-lg-4 actualContentCell">
         <div class="imgrect TylerPNG" data-imgcontainrect-src="{{ base }}/Tyler-James/wprofile-pic.png">
-          <img alt="Alchemyst123's profile picture" src="{{ base }}/Tyler-James/profile-pic.png">
+          <img alt="Tyler James Selfie #2" src="{{ base }}/Tyler-James/profile-pic.png">
         </div>
       </div>
 
@@ -128,7 +128,7 @@ title: "Tyler James Interview"
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-4 col-md-4 col-lg-4 actualContentCell">
         <div class="imgrect TylerPNG" data-imgcontainrect-src="{{ base }}/Tyler-James/selfie.jpg">
-          <img alt="Alchemyst123's profile picture" src="{{ base }}/Tyler-James/selfie.jpg">
+          <img alt="Tyler James #3" src="{{ base }}/Tyler-James/selfie.jpg">
         </div>
       </div>
 
@@ -150,7 +150,7 @@ title: "Tyler James Interview"
       <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Harry Potter or the Bible? Which is more scary?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Yea, I like some of his music but some of it's trash, the majority of it's trash. Oh, I'd say the Bible. Christians freak me out. I mean, they tell you you go to Hell if you do bad stuff. You know what? I'm talking a lot of s*** but I haven't even read the Bible.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Oh, I'd say the Bible. Christians freak me out. I mean, they tell you you go to Hell if you do bad stuff. You know what? I'm talking a lot of s*** but I haven't even read the Bible.</span></p>
          </div>
       </div>
 
