--- a/Tyler-James/index.html
+++ b/Tyler-James/index.html
@@ -29,7 +29,7 @@ title: "Tyler James Interview"
       <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">I've offered you a free iPhone and you rejected. Why?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I'm just used to using Androids and I like to stick with what I'm familiar with. I honestly don't think Androids aren that bad, and I think iPhones aren't that great.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I'm just used to using Androids and I like to stick with what I'm familiar with. I honestly don't think Androids are that bad, and I think iPhones aren't that great.</span></p>
         </div>
       </div>
 
