--- a/Tyler-James/index.html
+++ b/Tyler-James/index.html
@@ -49,7 +49,7 @@ title: "Tyler James Interview"
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-5 col-md-4 col-lg-4 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What's the happiest Marilyn Manson song you know of?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Oh... man, I'd have to think... He's got to have at least one happy song right? "I don't like drugs but the drugs like me.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">Oh... man, I'd have to think... He's got to have at least one happy song right? "I don't like drugs but the drugs like me."</span></p>
          </div>
       </div>
 
