--- a/Rhexisgaming/index.html
+++ b/Rhexisgaming/index.html
@@ -76,7 +76,7 @@ title: "Rhexisgaming Interview"
   </div>
 </div>
 
-      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-5 col-lg-push-2 actualContentCell">
+      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-5 actualContentCell">
         <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect twitch-streamPNG"
           data-imgcontainrect-src="{{ base }}/Rhexisgaming/stream.png">
           <img alt="Rhexisgaming Twitch stream screenshot" src="{{ base }}/Rhexisgaming/stream.png">
