--- a/Rhexisgaming/index.html
+++ b/Rhexisgaming/index.html
@@ -17,6 +17,9 @@ title: "Rhexisgaming Interview"
   .imgrectCaptionChild {
     left: 50%;
   }
+  .textCaptionRowBelow {
+    display: table-row;
+  }
 </style>
 
 
@@ -51,7 +54,7 @@ title: "Rhexisgaming Interview"
 
 
 <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-pull-9 col-lg-3 actualContentCell">
-  <div class="col-xs-7 col-sm-7 col-md-2 col-lg-12 imgrect twitch-streamPNG"
+  <div class="col-xs-7 col-sm-2 col-md-2 col-lg-12 imgrect twitch-streamPNG"
     data-imgcontainrect-src="{{ base }}/Rhexisgaming/stream.png">
     <img alt="Rhexisgaming's webcam from when he's streaming" src="{{ base }}/Rhexisgaming/Capture.PNG">
   </div>
@@ -61,7 +64,7 @@ title: "Rhexisgaming Interview"
 
 <hr>
 
-<div class="col-xs-width100 col-sm-6 col-md-6 col-lg-2 actualContentCell">
+<div class="col-xs-width100 col-sm-width100 col-md-6 col-lg-2 actualContentCell">
   <div class="textContainer">
     <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Are you vaccinated?</span></h3>
     <p class="vwLargerWindow-p textCenter"><span class="pSpan">Strange interview, not going to lie. Yes, I'm vaccinated.</span></p>
@@ -69,12 +72,31 @@ title: "Rhexisgaming Interview"
 </div>
 
 
-<div class="col-xs-width100 col-sm-6 col-md-6 col-lg-5 actualContentCell">
-  <div class="textContainer">
-    <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Some reports say if you get vaccinated a permanent Bill Gates tattoo appears on your arm. Did this happen to you?</span></h3>
-    <p class="vwLargerWindow-p textCenter"><span class="pSpan">I have a Bill Murray tattoo, so...</span></p>
+<div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-6 col-lg-5 actualContentCell">
+  <div class="imageCaptionContainer">
+    <div class="imageCaptionTBODY">
+      <div class="textCaptionRow textCaptionRowBelow">
+        <div>
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Some reports say vaccination can cause a permanent Bill Gates tattoo on your arm [Like the one in the picture]. <br>Did this happen to you?</span></h3>
+        </div>
+      </div>
+      <div class="no-keyboard-mouseOnlyPNG imageCaptionRowAbove col-xs-alone col-xs-7 col-sm-8 col-md-7 col-lg-6">
+        <div class="col-xs-alone imgrectCaption">
+          <div class="imgrectCaptionChild col-xs-alone imgrectagain" data-imgcontainrect-src="{{ base }}/Rhexisgaming/EvrbXxqU8AINQww.jpg">
+            <img src="{{ base }}/Rhexisgaming/EvrbXxqU8AINQww.jpg" class="col-xs-7 col-xs-alone col-sm-3 col-md-7 col-lg-6 htmlCheck imgCaption">
+          </div>
+        </div>
+      </div>
+      <div class="textCaptionRow textCaptionRowBelow">
+        <div>
+          <p class="pCaption">I have a Bill Murray tattoo, so....</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-5 actualContentCell">
         <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect twitch-streamPNG"
