--- a/Alchemyst123/index.html
+++ b/Alchemyst123/index.html
@@ -17,8 +17,8 @@ title: "Alchemyst123 Interview"
 
       <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-width100 col-lg-alone actualContentCell">
         <div class="col-xs-11 col-sm-9 col-md-8 col-lg-7 imgrect Alchemyst123-streamingPNG"
-        data-imgcontainrect-src="{{ base }}/Alchemyst123/stream.png">
-            <img alt="Alchemyst123 streaming" src="{{ base }}/Alchemyst123/stream.png">
+        data-imgcontainrect-src="{{ base }}/Alchemyst123/stream.PNG">
+            <img alt="Alchemyst123 streaming" src="{{ base }}/Alchemyst123/stream.PNG">
         </div>
       </div>
 
