--- a/Alchemyst123/index.html
+++ b/Alchemyst123/index.html
@@ -109,7 +109,7 @@ title: "Alchemyst123 Interview"
       <div class="col-xs-width100 col-sm-4 col-md-6 col-lg-7 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">I notice your donation link on Twitch is for caffeine supplementation. Have you tried caffeine pills?</span></h3>
-          <img alt="Alchemyst123's donation image'" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" src="{{ base }}/Alchemyst123/caffeine.png">
+          <img alt="Alchemyst123's donation image'" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" src="{{ base }}/Alchemyst123/caffeine.PNG">
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">Yes. I just prefer drinking coffee.</span></p>
         </div>
       </div>
