--- a/Alchemyst123/index.html
+++ b/Alchemyst123/index.html
@@ -79,7 +79,7 @@ title: "Alchemyst123 Interview"
       <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-7 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Have you had a near-death experience?</span></h3>
-          <img alt="Alchemyst123 on his stream, cropped to only show webcam and it's surrounding border" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" src="{{ base }}/Alchemyst123/webcam.png">
+          <img alt="Alchemyst123 on his stream, cropped to only show webcam and it's surrounding border" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" src="{{ base }}/Alchemyst123/webcam.PNG">
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">Yes, due to illness. Not due to being in a car accident or something like that.</span></p>
          </div>
       </div>
