--- a/Tyler-James/index.html
+++ b/Tyler-James/index.html
@@ -120,7 +120,7 @@ title: "Tyler James Interview"
       <div class="col-xs-width100 col-sm-3 col-md-3 col-lg-3 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What's your favorite Bible verse?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">My favorite BIble verse is John 3:16 because there's a parody by wrestler Stone Cold.</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">My favorite Bible verse is John 3:16 because there's a parody by wrestler Stone Cold.</span></p>
         </div>
       </div>
 
