--- a/Black7Star/index.html
+++ b/Black7Star/index.html
@@ -15,20 +15,14 @@ title: "Black7Star Interview"
 
 
 
-      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-width100 col-sm-alone col-md-width100 col-md-alone col-lg-6 col-lg-push-3 actualContentCell">
-        <div class="col-xs-7 col-sm-7 col-md-6 col-lg-12 imgrect twitch-streamPNG"
-          data-imgcontainrect-src="{{ base }}/Black7Star/twitch-stream.png">
-          <img alt="OwlBearKing streaming screenshot" src="{{ base }}/Black7Star/twitch-stream.png">
-        </div>
-      </div>
 
-      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-3 col-lg-pull-6 actualContentCell">
+      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 col-lg-pull-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">This is a trick question: Are you more of a Bob, or Larry the Cucumber person?</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">I remember Larry, I remember the stories they taught. I was really young when teaching this in Sunday school... how's it a trick question?</span></p>
         </div>
       </div>
-      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-3 actualContentCell">
+      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">IDK but Google is obsessing over Bob Marley today. Did he die February 6th?</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">I don't know.</span></p>
@@ -41,7 +35,7 @@ title: "Black7Star Interview"
 
 
 
-      <div class="col-xs-width100 col-sm-5 col-md-5 col-lg-4 actualContentCell">
+      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">I stuttered on "if you, like... if you, if you... i mean, like: If you..." and you finished my setence with "are cool with that" when going on about interviewers being deceitful.</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">I watch a lot of podcasts, I'm open-minded. I don't mind banter as a joke. People make mistakes.</span></p>
@@ -49,20 +43,10 @@ title: "Black7Star Interview"
       </div>
 
 
-      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-7 col-md-7 col-lg-8 actualContentCell">
-        <div class="col-xs-7 col-sm-5 col-md-4 col-lg-12 imgrect tarotPNG"
-          data-imgcontainrect-src="{{ base }}/Black7Star/tarot.png">
-          <img alt="OwlBearKing has three tarot readings for sale on Twitch.tv" src="{{ base }}/Black7Star/tarot.png">
-        </div>
-      </div>
 
 
 
-      <hr>
-
-
-
-      <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
+      <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Shouldn't you be the one to run this entire website? I hope this doesn't sound like an attack against you because I'm starting to wonder if I should question my mentality versus you because you're not a childish freak, do you agree or disagree?</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">No, definitely no. I can be immature.</span></p>
@@ -89,7 +73,7 @@ title: "Black7Star Interview"
       </div>
 
 
-      <div class="col-xs-width100 col-sm-3 col-md-3 col-lg-3 actualContentCell">
+      <div class="col-xs-width100 col-sm-4 col-md-4 col-lg-3 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Should they make a veggie tales about sedative jail muffins?</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">I think that'd good episodes. I've been to prison before in certain scenarios. Jails are institutionalized but there was a scene where, perhaps a cucumber or different vegetable was in jail and set free.
@@ -98,20 +82,14 @@ title: "Black7Star Interview"
       </div>
 
 
-      <div class="col-xs-width100 col-sm-2 col-md-2 col-lg-2 actualContentCell">
+      <div class="col-xs-width100 col-sm-4 col-md-4 col-lg-2 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">In the scene, with your memory being fond of a vegetable in prison during VeggieTales, was that vegetable prisoner sleepy... or awake?</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">I think he was sleepy, and then woke up. Then there was monologue. I may be thinking about Shangai Knights. Jackie Chan and Owen Wilson!!!</span></p>
         </div>
       </div>
 
-      
-      <div class="imgOnly col-xs-width100 col-xs-alone col-sm-2 col-md-2 col-lg-2 actualContentCell">
-        <div class="col-xs-5 col-sm-7 col-md-6 col-lg-12 imgrect bunny-rivenGIF"
-          data-imgcontainrect-src="{{ base }}/Black7Star/bunny-riven.gif">
-          <img alt="OwlBearKing streaming screenshot" src="{{ base }}/Black7Star/bunny-riven.gif">
-        </div>
-      </div>
+     
 
       <hr>
 
@@ -126,11 +104,9 @@ title: "Black7Star Interview"
 
       <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
         <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Watch OwlBearKing!</span></h3>
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Watch Black7Star!</span></h3>
           <ul class="verse-UL">
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.twitch.tv/owlbearking">Twitch</a></span></li>
-            <hr>
-            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://twitter.com/Owlbearking">Twitter</a></span></li>
+            <li class="vwLargerWindow-li"><span class="verseSpan"><a href="https://www.twitch.tv/Black7Star">Twitch</a></span></li>
           </ul>
         </div>
       </div>
