--- a/Black7Star/index.html
+++ b/Black7Star/index.html
@@ -19,7 +19,7 @@ title: "Black7Star Interview"
       <div class="col-xs-width100 col-sm-12 col-md-6 col-lg-6 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">This is a trick question: Are you more of a Bob, or Larry the Cucumber person?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I remember Larry, I remember the stories they taught. I was really young when teaching this in Sunday school... how's it a trick question?</span></p>
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I remember Larry, I remember the stories they taught. I was really young when they were teaching this in Sunday school... how's it a trick question?</span></p>
         </div>
       </div>
       <div class="col-xs-width100 col-sm-12 col-md-6 col-lg-6 actualContentCell">
