--- a/Black7Star/index.html
+++ b/Black7Star/index.html
@@ -76,7 +76,7 @@ title: "Black7Star Interview"
       <div class="col-xs-width100 col-sm-4 col-md-4 col-lg-3 actualContentCell">
         <div class="textContainer">
           <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">Should they make a veggie tales about sedative jail muffins?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I think that'd good episodes. I've been to prison before in certain scenarios. Jails are institutionalized but there was a scene where, perhaps a cucumber or different vegetable was in jail and set free.
+          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I think that'd [involve] good episodes. I've been to prison before in certain scenarios. Jails are institutionalized but there was a scene where, perhaps a cucumber or different vegetable was in jail and set free.
 </span></p>
         </div>
       </div>
@@ -93,14 +93,6 @@ title: "Black7Star Interview"
 
       <hr>
 
-      <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
-        <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">What do you think about the political climate?</span></h3>
-          <p class="vwLargerWindow-p textCenter"><span class="pSpan">I think Joe Biden should finally ****in' give me $10,000 back or remove my student debt like he promised. It's B******* actually, he cancelled $34 million in student debt for kids that went to non-profit colleges? They're all for profit. They're all overpriced, and... B******* with how they teach.</span></p>
-        </div>
-      </div>
-
-      <hr>
 
       <div class="col-xs-width100 col-sm-12 col-md-12 col-lg-12 actualContentCell">
         <div class="textContainer">
