--- a/Black7Star/index.html
+++ b/Black7Star/index.html
@@ -37,7 +37,7 @@ title: "Black7Star Interview"
 
       <div class="col-xs-width100 col-sm-6 col-md-6 col-lg-6 actualContentCell">
         <div class="textContainer">
-          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">I stuttered on "if you, like... if you, if you... i mean, like: If you..." and you finished my setence with "are cool with that" when going on about interviewers being deceitful... you knew!?</span></h3>
+          <h3 class="vwLargerWindow-h3"><span class="span-h3-verses">I stuttered on "if you, like... if you, if you... I mean, like: If you..." and you finished my setence with "are cool with that" when going on about interviewers being deceitful... you knew!?</span></h3>
           <p class="vwLargerWindow-p textCenter"><span class="pSpan">I watch a lot of podcasts, I'm open-minded. I don't mind banter as a joke. People make mistakes.</span></p>
         </div>
       </div>
