--- a/new/index.html
+++ b/new/index.html
@@ -4,30 +4,22 @@ active: new-navbar
 inside-more: organized-navigation
 permalink: /new/
 ---
-
-
   <h1 class="title">New Interviews</h1>
   <h2 class="subtitle">Newest Interviews at the top:</h2>
   <div class="middleTableContentContainer">
     <div class="middleTbodyContentContainer">
       <div class="actualContentRow">
-
-
-
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 actualContentCell">
           <table class="tftable">
             <tr class="normalTR"><th class="normalTH TH1-3"><span class="vwLargerWindow-THorTD">Interview</span></th><th class="hidden-xs normalTH TH2-3"><span class="vwLargerWindow-THorTD">First Shared</span></th><th class="hidden-xs normalTH TH3-3"><span class="vwLargerWindow-THorTD">Last Updated (Estimate)</span></th></tr>
             <tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/Black7Star/"><span class="vwLargerWindow-THorTD">Black7Star</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">2/6/2023</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">2/6/2023</span></td></tr>
             <tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/Employee-of-the-United-States-Penitentiary-Administrative-Maximum-Colorado/"><span class="vwLargerWindow-THorTD">Employee of the US Supermax (Colorado)</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">7/16/2021</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">7/21/2021</span></td></tr>
+            <tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/KillerFail/"><span class="vwLargerWindow-THorTD">KillerFail</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">7/13/2021</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">7/13/2021</span></td></tr>
             <tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/gatorade2008/"><span class="vwLargerWindow-THorTD">gatorade2008</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">7/12/2021</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">7/12/2021</span></td></tr>
             <tr class="normalTR"><td class="normalTD TD1-3"><a href="{{ base }}/welp_x/"><span class="vwLargerWindow-THorTD">welp_x</span></a></td><td class="hidden-xs normalTD TD2-3"><span class="vwLargerWindow-THorTD">7/11/2021</span></td><td class="hidden-xs normalTD TD3-3"><span class="vwLargerWindow-THorTD">7/11/2021</span></td></tr>
           </table>	
         </div>
         
-
   {% include footerNav.html %}
-
-
 </body>
-
 </html>
